[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Bar.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/Main Character/health_bar/lifebar_fill_white.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/Main Character/health_bar/lifebar_bg.png" type="Texture" id=4]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_right = -1376.0
margin_bottom = 93.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 524.0
margin_bottom = 73.0

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 396.0
margin_bottom = 53.0

[node name="Bar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_right = 396.0
margin_bottom = 53.0
script = ExtResource( 2 )

[node name="Gauge2nd" type="TextureProgress" parent="HBoxContainer/Bars/Bar"]
margin_right = 396.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.27451, 0.27451, 0.27451, 1 )
tint_progress = Color( 0.870588, 0.423529, 0.423529, 1 )

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/Bars/Bar/Gauge2nd"]
margin_right = 396.0
margin_bottom = 53.0
value = 25.0
texture_progress = ExtResource( 3 )

[node name="UpdateTween" type="Tween" parent="HBoxContainer/Bars/Bar"]

[node name="PulseTween" type="Tween" parent="HBoxContainer/Bars/Bar"]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="HBoxContainer/Bars/Bar"]
[connection signal="health_updated" from="." to="HBoxContainer/Bars/Bar" method="_on_GUI_health_updated"]
